<resources>
    <string name="app_name">NFC for eCommerce</string>
    <string name="admin">Admin</string>
    <string name="cashier">Cashier</string>
    <string name="list_of_customers">List of Customers</string>
    <string name="add_customer">Add Customer</string>
    <string name="no_customer">No customer</string>
    <string name="customer_support">Customer Support</string>
    <string name="nfc_hint">Tap device on nfc tag</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_tag_id">Tag Id</string>
    <string name="hint_account_balance">Account Balance</string>
    <string name="hint_amount">Amount</string>
    <string name="credit">Credit</string>
    <string name="card_background_image">Card view background image</string>
    <string name="sample_tag_id">2453CA2343</string>
    <string name="sample_customer_name">Belema Ogan</string>
    <string name="sample_customer_account_balance">₦2000</string>
</resources>
