<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".admin.addcustomer.AddCustomerFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/addCustomerViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tagIdTextInputLayout, fullNameTextInputLayout,
        accountBalanceTextInputLayout, addCustomerButton" />


    <include android:id="@+id/scanNfcTagHintViews"
        layout="@layout/scan_nfc_tag_hint" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tagIdTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tagIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"
            android:enabled="false"
            android:hint="@string/hint_tag_id" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tagIdTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/tagIdTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/tagIdTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullNameEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_full_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/accountBalanceTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/fullNameTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/fullNameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/fullNameTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_account_balance" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addCustomerButton"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_customer"
        app:layout_constraintEnd_toEndOf="@+id/accountBalanceTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/accountBalanceTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/accountBalanceTextInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>